fixing calculation from first and last movie to the two closest movies; adding some tests